--- a/app/all-projects-industries.html
+++ b/app/all-projects-industries.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SMBeez : Project Listing</title>
+    <title>SMBeez : All Projects Industries</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -60,126 +60,77 @@
   	<main class="cd-main-content">
   		<!-- your content here -->
 
-      <section class="hero-project">
+      <section class="hero-company hero-all">
         <div class="container-fluid">
           <div class="row">
             <div class="col-xl-6 col-md-12 offset-xl-3">
-              <h1 class="text-center">Discover projects in over 10 industries</h1>
+              <h1 class="text-center">Browse projects in more than 10 industries</h1>
               <p class="text-center">In your local marketplace</p>
-              <div class="btn-hero text-center">
-                <a href="#" class="btn btn-yellow-2">publish your project</a>
-              </div>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="list-project">
+      <section class="all-projects">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
-              <div class="filter">
-                <form action="" class="form-group row">
-                  <div class="col-md-12">
-                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0 w-100">
-                      <option selected>All Industries</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
-
-                    <div class="search-filter">
-                        <h3>Select from specialities <i class="fa fa-filter pull-right" aria-hidden="true"></i></h3>
-                      <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search within projects">
-                      </div>
-                <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Electrical Supplies</span>
-                      </label>
-                    </div>
-                    <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">CMS</span>
-                      </label>
-                    </div>
-                    <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Civil Engineering</span>
-                      </label>
-                    </div>
-                    <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Sales force</span>
-                      </label>
-                    </div>
-                    <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Finanacial Consultancy</span>
-                      </label>
-                    </div>
-                    <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Tutoring</span>
-                      </label>
-                    </div>
-                    </div>
-                  </div>
-                </form>
-
+            <div class="col-md-3">
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">Agriculture, Fishing, and Food<i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <img src="images/media/all-01.jpg" alt="" class="img-fluid img-full">
+              </div>
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">Oil, Gas, and Mining <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <img src="images/media/all-02.jpg" alt="" class="img-fluid img-full">
+              </div>
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">Utilities and Waste Management <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <img src="images/media/all-03.jpg" alt="" class="img-fluid img-full">
               </div>
             </div>
-            <div class="col-md-8">
-              <div class="row equal">
+            <div class="col-md-6">
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">Construction and Real Estate <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <img src="images/media/all-07.jpg" alt="" class="img-fluid img-full">
+              </div>
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">IT and Communication <i class="fa fa-2x fa-angle-right " aria-hidden="true"></i></h2>
+                <img src="images/media/all-08.jpg" alt="" class="img-fluid img-full">
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">Trade, Wholesale and Retail <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <img src="images/media/all-04.jpg" alt="" class="img-fluid img-full">
+              </div>
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">Manufacturing, Transportation, and Warehousing <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <img src="images/media/all-05.jpg" alt="" class="img-fluid">
+              </div>
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">Finance and Insurance<i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <img src="images/media/all-06.jpg" alt="" class="img-fluid img-full">
+              </div>
+            </div>
+          </div>
 
-                <div class="col-md-6">
-                  <div class="project-box box-block">
-                    <p class="thumb-title mt-1 mb-1">Low Cost Advertising</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described a</p>
-                    <p class="tags">More in: <a href="">Trade, Wholesale and Retail</a></p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="project-box box-block">
-                    <p class="thumb-title mt-1 mb-1">Low Cost Advertising</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described a</p>
-                    <p class="tags">More in: <a href="">Trade, Wholesale and Retail</a></p>
-                  </div>
-                </div>
-
-                <div class="col-md-12 mt-5">
-                  <div class="project-box project-box-side box-block ">
-                    <p class="thumb-title mt-1 mb-1">Direct Mail Advertising</p>
-                    <p>Over time, even the most sophisticated, memory packed computer can begin to run slow if we don’t do something to prevent it.</p>
-                    <p class="tags">More in: <a href="">Finance and Insurance</a></p>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="project-box project-box-side box-block ">
-                    <p class="thumb-title mt-1 mb-1">Direct Mail Advertising</p>
-                    <p>Over time, even the most sophisticated, memory packed computer can begin to run slow if we don’t do something to prevent it.</p>
-                    <p class="tags">More in: <a href="">Finance and Insurance</a></p>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="project-box project-box-side box-block border-0 ">
-                    <p class="thumb-title mt-1 mb-1">Direct Mail Advertising</p>
-                    <p>Over time, even the most sophisticated, memory packed computer can begin to run slow if we don’t do something to prevent it.</p>
-                    <p class="tags">More in: <a href="">Finance and Insurance</a></p>
-                  </div>
-                </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">General Services and Cleaning<i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <img src="images/media/all-09.jpg" alt="" class="img-fluid img-full">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">HealthCare <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <img src="images/media/all-10.jpg" alt="" class="img-fluid img-full">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="all-box">
+                <h2 class="d-flex justify-content-between align-items-center p-2">Education, Arts, Sports, and Entertainment <i class="fa fa-2x fa-angle-right" aria-hidden="true"></i></h2>
+                <img src="images/media/all-11.jpg" alt="" class="img-fluid img-full">
               </div>
             </div>
 
@@ -187,6 +138,18 @@
         </div>
       </section>
 
+
+      <section class="create-intro bg-blue">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-6 col-xs-12 offset-md-3 text-center">
+              <h2>Be Found</h2>
+              <p class="mt-5 mb-5">Create your company profile and sar thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
+              <a href="" class="btn btn-blue btn-yellow-2 ">Browse Projects</a>
+            </div>
+          </div>
+        </div>
+      </section>
 
   	</main>
 
