--- a/app/search-result-projects.html
+++ b/app/search-result-projects.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SMBeez : Project Listing</title>
+    <title>SMBeez : Search Result Project</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -25,7 +25,7 @@
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-  <body>
+  <body class="no-hero">
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -60,129 +60,46 @@
   	<main class="cd-main-content">
   		<!-- your content here -->
 
-      <section class="hero-project">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-xl-6 col-md-12 offset-xl-3">
-              <h1 class="text-center">Discover projects in over 10 industries</h1>
-              <p class="text-center">In your local marketplace</p>
-              <div class="btn-hero text-center">
-                <a href="#" class="btn btn-yellow-2">publish your project</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
       <section class="list-project">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
-              <div class="filter">
-                <form action="" class="form-group row">
-                  <div class="col-md-12">
-                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0 w-100">
-                      <option selected>All Industries</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
 
-                    <div class="search-filter">
-                        <h3>Select from specialities <i class="fa fa-filter pull-right" aria-hidden="true"></i></h3>
-                      <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search within projects">
-                      </div>
-                <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Electrical Supplies</span>
-                      </label>
-                    </div>
-                    <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">CMS</span>
-                      </label>
-                    </div>
-                    <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Civil Engineering</span>
-                      </label>
-                    </div>
-                    <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Sales force</span>
-                      </label>
-                    </div>
-                    <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Finanacial Consultancy</span>
-                      </label>
-                    </div>
-                    <div class="form-group">
-                      <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" required>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Tutoring</span>
-                      </label>
-                    </div>
-                    </div>
-                  </div>
-                </form>
-
-              </div>
-            </div>
             <div class="col-md-8">
-              <div class="row equal">
-
-                <div class="col-md-6">
-                  <div class="project-box box-block">
-                    <p class="thumb-title mt-1 mb-1">Low Cost Advertising</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described a</p>
-                    <p class="tags">More in: <a href="">Trade, Wholesale and Retail</a></p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="project-box box-block">
-                    <p class="thumb-title mt-1 mb-1">Low Cost Advertising</p>
-                    <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described a</p>
-                    <p class="tags">More in: <a href="">Trade, Wholesale and Retail</a></p>
-                  </div>
-                </div>
-
-                <div class="col-md-12 mt-5">
-                  <div class="project-box project-box-side box-block ">
-                    <p class="thumb-title mt-1 mb-1">Direct Mail Advertising</p>
-                    <p>Over time, even the most sophisticated, memory packed computer can begin to run slow if we don’t do something to prevent it.</p>
-                    <p class="tags">More in: <a href="">Finance and Insurance</a></p>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="project-box project-box-side box-block ">
-                    <p class="thumb-title mt-1 mb-1">Direct Mail Advertising</p>
-                    <p>Over time, even the most sophisticated, memory packed computer can begin to run slow if we don’t do something to prevent it.</p>
-                    <p class="tags">More in: <a href="">Finance and Insurance</a></p>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="project-box project-box-side box-block border-0 ">
-                    <p class="thumb-title mt-1 mb-1">Direct Mail Advertising</p>
-                    <p>Over time, even the most sophisticated, memory packed computer can begin to run slow if we don’t do something to prevent it.</p>
-                    <p class="tags">More in: <a href="">Finance and Insurance</a></p>
-                  </div>
-                </div>
+              <p class="search-info">Showing 10-56 results for ‘Recycling Projects’...</p>
+              <h3 class="search-title text-uppercase">Project Details <span class="pull-right">Closing Date</span></h3>
+              <div class="search-block br-btm mb-3 pb-3">
+                <h2 class="mt-4 mb-3"><a href="">5 Reasons To Choose A Notebook </a> <span class="date">Monday, 27 Nov. 2017</span></h2>
+                <p>Audio player software is used to play back sound recordings in one of the many formats available for computers today. It can also play back music CDs. There is audio player software that is native to the computer’s operating system (Windows,</p>
+                <p class="tags"><b>Specialities:</b> <span>Compare Prices Find, The Best Computer Accessory</span></p>
+                <p class="tags"><b>Budget:</b> <span>3,500 AED</span></p>
+                <button class="btn btn-yellow-2 btn-sm pull-right">Express Interest</button>
+              </div>
+              <div class="search-block br-btm mb-3 pb-3">
+                <h2 class="mt-4 mb-3"><a href="">5 Reasons To Choose A Notebook </a> <span class="date">Monday, 27 Nov. 2017</span></h2>
+                <p>Audio player software is used to play back sound recordings in one of the many formats available for computers today. It can also play back music CDs. There is audio player software that is native to the computer’s operating system (Windows,</p>
+                <p class="tags"><b>Specialities:</b> <span>Compare Prices Find, The Best Computer Accessory</span></p>
+                <p class="tags"><b>Budget:</b> <span>3,500 AED</span></p>
+                <button class="btn btn-yellow-2 btn-sm pull-right">Express Interest</button>
+              </div>
+              <div class="search-block mb-3 pb-3">
+                <h2 class="mt-4 mb-3"><a href="">5 Reasons To Choose A Notebook </a> <span class="date">Monday, 27 Nov. 2017</span></h2>
+                <p>Audio player software is used to play back sound recordings in one of the many formats available for computers today. It can also play back music CDs. There is audio player software that is native to the computer’s operating system (Windows,</p>
+                <p class="tags"><b>Specialities:</b> <span>Compare Prices Find, The Best Computer Accessory</span></p>
+                <p class="tags"><b>Budget:</b> <span>3,500 AED</span></p>
+                <button class="btn btn-yellow-2 btn-sm pull-right">Express Interest</button>
               </div>
             </div>
+            <div class="col-md-4">
+              <h3>Featured Projects</h3>
+              <div class="project-box box-block mb-3 mt-3">
+                <p class="thumb-title mt-1 mb-1">Low Cost Advertising</p>
+                <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described a</p>
+                <p class="tags">More in: <a href="">Trade, Wholesale and Retail</a></p>
+              </div>
 
+
+
+            </div>
           </div>
         </div>
       </section>
