--- a/app/index.html
+++ b/app/index.html
@@ -38,22 +38,30 @@
           <div class="col-md-12 text-center">
               <div class="cd-logo" style="position: inherit; float: none; margin: 20px auto; "><a href="#"><img src="images/common/logo.svg" alt="Logo"></a></div>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-6">
             <h1 class="mt-4 mb-4">List Pages</h1>
-            <ul  class="list-group">
-              <li  class="list-group-item"><a href="home.html">Home Page</a></li>
-              <li  class="list-group-item"><a href="project-listing.html">Project List</a></li>
-              <li  class="list-group-item"><a href="project-details.html">Project Details</a></li>
-              <li  class="list-group-item"><a href="company-listing.html">Company List</a></li>
-              <li  class="list-group-item"><a href="company-details.html">Company Details</a></li>
-              <li  class="list-group-item"><a href="search-result-projects.html">Search Result Project</a></li>
-              <li  class="list-group-item"><a href="search-result-company.html">Search Result Company</a></li>
-              <li  class="list-group-item"><a href="all-projects-industries.html">All Projects Industries</a></li>
-
-
+            <ul class="list-group">
+              <li class="list-group-item"><a href="home.html">Home Page</a></li>
+              <li class="list-group-item"><a href="project-listing.html">Project List</a></li>
+              <li class="list-group-item"><a href="project-details.html">Project Details</a></li>
+              <li class="list-group-item"><a href="company-listing.html">Company List</a></li>
+              <li class="list-group-item"><a href="company-details.html">Company Details</a></li>
+              <li class="list-group-item"><a href="search-result-projects.html">Search Result Project</a></li>
+              <li class="list-group-item"><a href="search-result-company.html">Search Result Company</a></li>
+              <li class="list-group-item"><a href="all-projects-industries.html">All Projects Industries</a></li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <h1 class="mt-4 mb-4">Logged In</h1>
+            <ul class="list-group">
+              <li class="list-group-item"><a href="dashboard.html">Dashboard</a></li>
+              <li class="list-group-item"><a href="dashboard-compnay.html">Dashboard-Company</a></li>
+              <li class="list-group-item"><a href="dashboard-projects-applied.html">Dashboard Projects Applied</a></li>
+              <li class="list-group-item"><a href="dashboard-published-projects.html">Dashboard Published Projects</a></li>
+              <li class="list-group-item"><a href="dashboard-messages.html">Dashboard Messages</a></li>
+              <li class="list-group-item"><a href="dashboard-bookmarks.html">Dashboard bookmarks</a></li>
 
             </ul>
-
           </div>
         </div>
       </div>
