add new pages to index

--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,8 @@
               <li class="list-group-item"><a href="search-result-projects.html">Search Result Project</a></li>
               <li class="list-group-item"><a href="search-result-company.html">Search Result Company</a></li>
               <li class="list-group-item"><a href="all-projects-industries.html">All Projects Industries</a></li>
+              <li class="list-group-item"><a href="all-projects-industries.html">All Projects Industries</a></li>
+              <li class="list-group-item"><a href="add-company.html">Add Company (on progress)</a></li>
             </ul>
           </div>
           <div class="col-md-6">
@@ -60,7 +62,9 @@
               <li class="list-group-item"><a href="dashboard-published-projects.html">Dashboard Published Projects</a></li>
               <li class="list-group-item"><a href="dashboard-messages.html">Dashboard Messages</a></li>
               <li class="list-group-item"><a href="dashboard-bookmarks.html">Dashboard bookmarks</a></li>
-
+              <li class="list-group-item"><a href="dashboard-add-company.html">Dashboard Add Company (on progress)</a></li>
+              <li class="list-group-item"><a href="complete-profile.html">Complete Profile (on progress)</a></li>
+              <li class="list-group-item"><a href="publish-project.html">Publish Project (on progress)</a></li>
             </ul>
           </div>
         </div>
